WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130931
LiveNodeLists should use ElementDescendantIterator
https://bugs.webkit.org/show_bug.cgi?id=130931
Summary
LiveNodeLists should use ElementDescendantIterator
Antti Koivisto
Reported
2014-03-29 12:44:18 PDT
It is better.
Attachments
patch
(32.55 KB, patch)
2014-03-29 13:00 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-03-29 13:00:23 PDT
Created
attachment 228114
[details]
patch
WebKit Commit Bot
Comment 2
2014-03-29 13:02:10 PDT
Attachment 228114
[details]
did not pass style-queue: ERROR: Source/WebCore/dom/ElementDescendantIterator.h:338: value_type is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/dom/ElementDescendantIterator.h:341: value_type is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2014-03-29 14:34:47 PDT
Comment on
attachment 228114
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228114&action=review
r=me, very glorious patch A+!
> Source/WebCore/dom/CollectionIndexCache.h:38 > + CollectionIndexCache(const Collection&);
explicit
Antti Koivisto
Comment 4
2014-03-30 01:37:43 PDT
https://trac.webkit.org/r166460
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug