Source/WebCore/dom/ChildNodeList.h
@@ -70,10 +70,11 @@ public:
     void invalidateCache();
 
     // For CollectionIndexCache
-    Node* collectionFirst() const;
+    Node* collectionBegin() const;
     Node* collectionLast() const;
-    Node* collectionTraverseForward(Node&, unsigned count, unsigned& traversedCount) const;
-    Node* collectionTraverseBackward(Node&, unsigned count) const;
+    Node* collectionEnd() const { return nullptr; }
+    void collectionTraverseForward(Node*&, unsigned count, unsigned& traversedCount) const;
+    void collectionTraverseBackward(Node*&, unsigned count) const;
     bool collectionCanTraverseBackward() const { return true; }
     void willValidateIndexCache() const { }
 
@@ -88,7 +89,7 @@ private:
     virtual bool isChildNodeList() const override { return true; }
 
     Ref<ContainerNode> m_parent;
-    mutable CollectionIndexCache<ChildNodeList, Node> m_indexCache;
+    mutable CollectionIndexCache<ChildNodeList, Node*> m_indexCache;
 };
 
 } // namespace WebCore
